--- a/BookReadingEvents.Domain/BookReadingEvents.Domain.csproj
+++ b/BookReadingEvents.Domain/BookReadingEvents.Domain.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Event.cs" />
     <Compile Include="Invitee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DummyEventData.cs" />
     <Compile Include="Services\DummyUserData.cs" />
     <Compile Include="Services\IEventData.cs" />
     <Compile Include="Services\IUserData.cs" />
