--- a/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
+++ b/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
@@ -56,8 +56,16 @@
     <Compile Include="Migrations\202107070702451_Initial.designer.cs">
       <DependentUpon>202107070702451_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107161816016_MigrationV2.cs" />
+    <Compile Include="Migrations\202107161816016_MigrationV2.designer.cs">
+      <DependentUpon>202107161816016_MigrationV2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DummyEventData.cs" />
+    <Compile Include="Services\DummyUserData.cs" />
+    <Compile Include="Services\IEventData.cs" />
+    <Compile Include="Services\IUserData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -72,6 +80,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202107070702451_Initial.resx">
       <DependentUpon>202107070702451_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107161816016_MigrationV2.resx">
+      <DependentUpon>202107161816016_MigrationV2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
