--- a/BookReadingEvents.Domain/BookReadingEvents.Domain.csproj
+++ b/BookReadingEvents.Domain/BookReadingEvents.Domain.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,10 +50,6 @@
     <Compile Include="Event.cs" />
     <Compile Include="Invitee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DummyEventData.cs" />
-    <Compile Include="Services\DummyUserData.cs" />
-    <Compile Include="Services\IEventData.cs" />
-    <Compile Include="Services\IUserData.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
