--- a/BookReadingEvents.BusinessLogic/BookReadingEvents.BusinessLogic.csproj
+++ b/BookReadingEvents.BusinessLogic/BookReadingEvents.BusinessLogic.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventBusinessLogic.cs" />
     <Compile Include="UserBusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
