Added business logic

--- a/BookReadingEvents.BusinessLogic/BookReadingEvents.BusinessLogic.csproj
+++ b/BookReadingEvents.BusinessLogic/BookReadingEvents.BusinessLogic.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventBusinessLogic.cs" />
     <Compile Include="UserBusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -48,6 +49,10 @@
     <ProjectReference Include="..\BookReadingEvents.DataAccess\BookReadingEvents.DataAccess.csproj">
       <Project>{C1993A19-3EC6-4551-A53B-808DE0530310}</Project>
       <Name>BookReadingEvents.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BookReadingEvents.Domain\BookReadingEvents.Domain.csproj">
+      <Project>{8FE10AEB-C887-445A-BA89-D50DB284E730}</Project>
+      <Name>BookReadingEvents.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
