--- a/BookReadingEvents/BookReadingEvents.csproj
+++ b/BookReadingEvents/BookReadingEvents.csproj
@@ -200,6 +200,8 @@
     <Content Include="Views\Events\MyEvents.cshtml" />
     <Content Include="Views\Login\SignUp.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutLoginSignup.cshtml" />
+    <Content Include="Views\Login\AllEventsBeforeLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
