--- a/BookReadingEvents/BookReadingEvents.csproj
+++ b/BookReadingEvents/BookReadingEvents.csproj
@@ -204,6 +204,7 @@
     <Content Include="Views\Events\Create.cshtml" />
     <Content Include="Views\Shared\_LayoutLoginSignup.cshtml" />
     <Content Include="Views\Login\AllEventsBeforeLoginSignup.cshtml" />
+    <Content Include="Views\Login\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
