--- a/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
+++ b/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Services\IEventData.cs" />
     <Compile Include="Services\IUserData.cs" />
     <Compile Include="Services\SqlEventData.cs" />
+    <Compile Include="Services\SqlUserData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
