--- a/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
+++ b/BookReadingEvents.DataAccess/BookReadingEvents.DataAccess.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C1993A19-3EC6-4551-A53B-808DE0530310}</ProjectGuid>
+    <ProjectGuid>{CF080053-36B7-4E7D-8DD9-7120AE5D8E79}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BookReadingEvents.DataAccess</RootNamespace>
@@ -51,17 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BookReadingEventsContext.cs" />
-    <Compile Include="Migrations\202107070702451_Initial.cs" />
-    <Compile Include="Migrations\202107070702451_Initial.designer.cs">
-      <DependentUpon>202107070702451_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202107161816016_MigrationV2.cs" />
-    <Compile Include="Migrations\202107161816016_MigrationV2.designer.cs">
-      <DependentUpon>202107161816016_MigrationV2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BookReadingEventsDbContext.cs" />
     <Compile Include="Services\DummyEventData.cs" />
     <Compile Include="Services\DummyUserData.cs" />
     <Compile Include="Services\IEventData.cs" />
@@ -70,22 +61,14 @@
     <Compile Include="Services\SqlUserData.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\BookReadingEvents.Domain\BookReadingEvents.Domain.csproj">
-      <Project>{8FE10AEB-C887-445A-BA89-D50DB284E730}</Project>
+      <Project>{8fe10aeb-c887-445a-ba89-d50db284e730}</Project>
       <Name>BookReadingEvents.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202107070702451_Initial.resx">
-      <DependentUpon>202107070702451_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202107161816016_MigrationV2.resx">
-      <DependentUpon>202107161816016_MigrationV2.cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
