--- a/BookReadingEvents/Web.config
+++ b/BookReadingEvents/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="BookReadingEventsDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=BookReadingEventsMVC; Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
