--- a/BookReadingEvents/BookReadingEvents.csproj
+++ b/BookReadingEvents/BookReadingEvents.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CreateEventViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\SignupViewModel.cs" />
   </ItemGroup>
@@ -201,10 +202,10 @@
     <Content Include="Views\Events\MyEvents.cshtml" />
     <Content Include="Views\Login\SignUp.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
-    <Content Include="Views\Events\Create.cshtml" />
     <Content Include="Views\Shared\_LayoutLoginSignup.cshtml" />
     <Content Include="Views\Login\AllEventsBeforeLoginSignup.cshtml" />
     <Content Include="Views\Login\Details.cshtml" />
+    <Content Include="Views\Events\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
