--- a/BookReadingEvents/BookReadingEvents.csproj
+++ b/BookReadingEvents/BookReadingEvents.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\TableData\Edit.cshtml" />
     <Content Include="Views\TableData\Detail.cshtml" />
     <Content Include="Views\Events\EventsInvitedTo.cshtml" />
+    <Content Include="Views\TableData\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
