--- a/BookReadingEvents/Web.config
+++ b/BookReadingEvents/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="BookReadingEventsDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=BookReadingEventsMVC; Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+		<add name="BookReadingEventsDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=BookReadingEventsMVC; Integrated Security=SSPI; MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
