--- a/UnitTestProject/packages.config
+++ b/UnitTestProject/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="4.17.0" targetFramework="net472" />
+  <package id="AutoFixture.Xunit2" version="4.17.0" targetFramework="net472" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="Fare" version="2.1.1" targetFramework="net472" />
+  <package id="Moq" version="4.16.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net472" />
 </packages>
